Updated Index File
Added the meta tags for the form.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
 	<meta charset="utf-8">
 <!-- 	-------- TO-DO: ADD META TAG AND NAME HERE -------- -->
+	<meta name="Author" content="Sebastian Meza-Torres">
+	<meta name="keywords" content="email, phone, state, forms, submit.">
+	<meta name="description" content="The objective for this webpage is to code a semantic form and make it accessible.">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Form Activity Solution File</title>
 <!-- 	-------- TO-DO: ADD LINK TO CSS HERE -------- -->
 </head>
