Updated Index File
Linked my index file to the CSS file.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Form Activity Solution File</title>
 <!-- 	-------- TO-DO: ADD LINK TO CSS HERE -------- -->
+	<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
 	<a href="#main-content" id="skipLink">Skip to main content</a>
