--- a/index.html
+++ b/index.html
@@ -32,7 +32,19 @@
 			<p>Today we'll be focusing on coding a form that is accessible and semantic, and we'll also briefly discuss skip links for your website. Forms can be a source of frustration for users, whether they specifically need help with accessing your website or if they just prefer that your forms be easy to use and submit. Follow along as we code this in class, and please ask questions as they arise. Let's make a form!</p>
 
 <!-- 	-------- TO-DO: ADD FORM CODE HERE DURING CLASS, FOLLOW ALONG TO COMPLETE -------- -->
-	<form method="post" action="https://wp.zybooks.com/form-viewer.php">
+	<form method="POST" action="https://wp.zybooks.com/form-viewer.php">
+		<label for="fullname">Full Name:</label>
+		<input type="text" id="fullname" name="fullname">
+
+		<label for="email">Email:</label>
+		<input type="email" id="email" name="email">
+
+		<label for="phone">Phone Number:</label>
+		<input type="tel" id="phone" name="phone">
+
+		<fieldset>
+			<legend>Preferred Method of Contact</legend>
+		</fieldset>
 
 	</form>
 		</article>
