updated Index File
Added a fieldset for the preferred contact method.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
 
 		<fieldset>
 			<legend>Preferred Method of Contact</legend>
+			<input type="radio" id="contactemail" name="contactmethod" value="email">
+			<label for="contactemail">Email</label>
+
+			<input type="radio" id="contactphone" name="contactmethod" value="phone">
+			<label for="contactphone">Phone</label>
 		</fieldset>
 
 	</form>
