--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
 
 <!-- 	-------- TO-DO: ADD FORM CODE HERE DURING CLASS, FOLLOW ALONG TO COMPLETE -------- -->
 	<form method="POST" action="https://wp.zybooks.com/form-viewer.php">
-		<label for="fullname">Full Name:</label>
-		<input type="text" id="fullname" name="fullname">
+		<label for="fullname">Full Name<span class="required">*</span></label>
+		<input type="text" id="fullname" name="fullname" required>
 
-		<label for="email">Email:</label>
-		<input type="email" id="email" name="email">
+		<label for="email">Email<span class="required">*</span></label>
+		<input type="email" id="email" name="email" required>
 
-		<label for="phone">Phone Number:</label>
-		<input type="tel" id="phone" name="phone">
+		<label for="phone">Phone Number<span class="required">*</span></label>
+		<input type="tel" id="phone" name="phone" required>
 
 		<fieldset>
-			<legend>Preferred Method of Contact</legend>
+			<legend>Preferred Method of Contact<span class="required">*</span></legend>
 			<input type="radio" id="contactemail" name="contactmethod" value="email">
 			<label for="contactemail">Email</label>
 
@@ -107,6 +107,11 @@
 			<option value="WY">Wyoming</option>
 
 		</select>
+
+		<label for="comments">Comments<span class="required">*</span></label>
+		<textarea id="comments" name="comments" rows="4" required></textarea>
+
+		<input type="submit" value="submit">
 
 	</form>
 		</article>
