Updated Index File
Added a span class of required for the state residence.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 		</fieldset>
 
-		<label for="state">State of Residence:</label>
+		<label for="state">State of Residence<span class="required">*</span></label>
 		<select id="state" name="state">
 			<option value="">Select Your State</option>
 			<option value="AL">Alabama</option>
