--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-<!-- 	-------- TO-DO: ADD META TAG AND NAME HERE -------- -->
+<!-- TO DO: ADD META TAGS AND NAME HERE -->
 	<meta name="Author" content="Sebastian Meza-Torres">
 	<meta name="keywords" content="email, phone, state, forms, submit.">
 	<meta name="description" content="The objective for this webpage is to code a semantic form and make it accessible.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Form Activity Solution File</title>
-<!-- 	-------- TO-DO: ADD LINK TO CSS HERE -------- -->
+<!-- TO DO: ADD LINK TO CSS HERE -->
 	<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
@@ -31,7 +31,7 @@
 			<h2>Coding Semantic and Accessible Forms!</h2>
 			<p>Today we'll be focusing on coding a form that is accessible and semantic, and we'll also briefly discuss skip links for your website. Forms can be a source of frustration for users, whether they specifically need help with accessing your website or if they just prefer that your forms be easy to use and submit. Follow along as we code this in class, and please ask questions as they arise. Let's make a form!</p>
 
-<!-- 	-------- TO-DO: ADD FORM CODE HERE DURING CLASS, FOLLOW ALONG TO COMPLETE -------- -->
+<!-- TO DO: ADD CODE FORM HERE DURING CLASS, FOLLOW ALONG TO COMPLETE -->
 	<form method="POST" action="https://wp.zybooks.com/form-viewer.php">
 		<label for="fullname">Full Name<span class="required">*</span></label>
 		<input type="text" id="fullname" name="fullname" required>
