--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 <!-- TO DO: ADD CODE FORM HERE DURING CLASS, FOLLOW ALONG TO COMPLETE -->
 	<form method="POST" action="https://wp.zybooks.com/form-viewer.php">
 		<label for="fullname">Full Name<span class="required">*</span></label>
-		<input type="text" id="fullname" name="fullname" required>
+		<input type="text" id="fullname" name="fullname" autocomplete="name" required>
 
 		<label for="email">Email<span class="required">*</span></label>
-		<input type="email" id="email" name="email" required>
+		<input type="email" id="email" name="email" autocomplete="email" required>
 
 		<label for="phone">Phone Number<span class="required">*</span></label>
-		<input type="tel" id="phone" name="phone" required>
+		<input type="tel" id="phone" name="phone" autocomplete="tel" required>
 
 		<fieldset>
 			<legend>Preferred Method of Contact<span class="required">*</span></legend>
